--- a/modules/auth/tsconfig.lib.json
+++ b/modules/auth/tsconfig.lib.json
@@ -5,9 +5,6 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": ["amazon-cognito-identity-js"],
-    "paths": {
-      "@env/*": ["modules/auth/*"]
-    }
+    "types": ["amazon-cognito-identity-js"]
   }
 }
