--- a/modules/auth0/tsconfig.lib.json
+++ b/modules/auth0/tsconfig.lib.json
@@ -5,9 +5,6 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
-    "paths": {
-      "@env/*": ["modules/auth0/*"]
-    }
+    "types": []
   }
 }
